--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "node-sass": "^4.7.2",
     "postcss-loader": "^2.1.1",
-    "sass-loader": "^6.0.7"
+    "sass-loader": "^6.0.7",
+    "webpack": "3.10.0",
+    "webpack-cli": "^2.0.10"
   }
 }
