--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^8.1.0",
+    "browser-sync": "^2.23.6",
+    "browser-sync-webpack-plugin": "^2.0.1",
     "css-loader": "^0.28.10",
     "extract-text-webpack-plugin": "^3.0.2",
     "node-sass": "^4.7.2",
     "postcss-loader": "^2.1.1",
     "sass-loader": "^6.0.7",
     "webpack": "3.10.0",
-    "webpack-cli": "^2.0.10"
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-server": "^3.1.0"
   }
 }
